--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,12 +33,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/EmployeeManagementSystem
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\kuros\\OneDrive\\Desktop\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.zip=C:\\Users\\kuros\\OneDrive\\Desktop\\jcalendar-1.4.zip
 file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\kuros\\Downloads\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-j-8.4.0.jar}
+    ${file.reference.mysql-connector-j-8.4.0.jar}:\
+    ${file.reference.jcalendar-1.4.zip}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
